--- a/config1.json
+++ b/config1.json
@@ -7,6 +7,30 @@
       ]
     },
     {
+      "name" : "t-d",
+      "length": 142,
+      "tags": ["fight", "gili", "cool guys"
+      ]
+    },
+    {
+      "name" : "Peaky Blinders the movie",
+      "length": 142,
+      "tags": ["cool guys"
+      ]
+    },
+    {
+      "name" : "grownups",
+      "length": 142,
+      "tags": ["gili"
+      ]
+    },
+    {
+      "name" : "kickass",
+      "length": 142,
+      "tags": ["fight"
+      ]
+    },
+    {
       "name" : "The Godfather",
       "length": 175,
       "tags": ["Drama",
@@ -26,7 +50,7 @@
       "name" : "Pulp Fiction",
       "length": 154,
       "tags": ["Crime",
-               "Drama"
+               "Drama","Comedy"
       ]
     }
   ],
